--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.3</version>
+		<version>3.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>nl.breun.spring.grpc</groupId>
@@ -16,10 +16,10 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<grpc.version>1.73.0</grpc.version>
+		<grpc.version>1.72.0</grpc.version><!-- Should match the version of io.grpc:* artifacts used by org.springframework.grpc:spring-grpc-server-spring-boot-starter: https://central.sonatype.com/artifact/org.springframework.grpc/spring-grpc-server-spring-boot-starter -->
 		<protobuf-java.version>4.30.2</protobuf-java.version>
-		<protobuf-maven-plugin.version>3.6.0</protobuf-maven-plugin.version>
-		<spring-grpc.version>0.9.0</spring-grpc.version>
+		<protobuf-maven-plugin.version>3.8.0</protobuf-maven-plugin.version>
+		<spring-grpc.version>0.10.0</spring-grpc.version>
 	</properties>
 
 	<dependencyManagement>
