Spring Boot 3.5.7 -> 4.0.0-RC2, Spring gRPC 0.12.0 -> 1.0.0-RC1, Maven 3.9.11 -> 4.0.0-rc-5

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.7</version>
+		<version>4.0.0-RC2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>nl.breun.spring.grpc</groupId>
@@ -19,7 +18,7 @@
 		<grpc.version>1.76.0</grpc.version><!-- Should match the version of io.grpc:* artifacts used by org.springframework.grpc:spring-grpc-server-spring-boot-starter:${spring-grpc.version}: https://central.sonatype.com/artifact/org.springframework.grpc/spring-grpc-server-spring-boot-starter -->
 		<protobuf-java.version>4.31.1</protobuf-java.version>
 		<protobuf-maven-plugin.version>3.9.0</protobuf-maven-plugin.version>
-		<spring-grpc.version>0.12.0</spring-grpc.version>
+		<spring-grpc.version>1.0.0-RC1</spring-grpc.version>
 	</properties>
 
 	<dependencyManagement>
