--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
 
 	<properties>
 		<java.version>25</java.version>
-		<grpc.version>1.76.0</grpc.version><!-- Should match the version of io.grpc:* artifacts used by org.springframework.grpc:spring-grpc-server-spring-boot-starter:${spring-grpc.version}: https://central.sonatype.com/artifact/org.springframework.grpc/spring-grpc-server-spring-boot-starter -->
-		<protobuf-java.version>4.31.1</protobuf-java.version>
-		<protobuf-maven-plugin.version>3.9.0</protobuf-maven-plugin.version>
-		<spring-grpc.version>1.0.0-RC1</spring-grpc.version>
+		<grpc.version>1.77.0</grpc.version><!-- Should match the version of io.grpc:* artifacts used by org.springframework.grpc:spring-grpc-server-spring-boot-starter:${spring-grpc.version}: https://central.sonatype.com/artifact/org.springframework.grpc/spring-grpc-server-spring-boot-starter -->
+		<protobuf-java.version>4.33.1</protobuf-java.version>
+		<protobuf-maven-plugin.version>4.0.3</protobuf-maven-plugin.version>
+		<spring-grpc.version>1.0.0</spring-grpc.version>
 	</properties>
 
 	<dependencyManagement>
@@ -65,7 +65,7 @@
 				<artifactId>protobuf-maven-plugin</artifactId>
 				<version>${protobuf-maven-plugin.version}</version>
 				<configuration>
-					<protocVersion>${protobuf-java.version}</protocVersion>
+					<protoc>${protobuf-java.version}</protoc>
 					<binaryMavenPlugins>
 						<binaryMavenPlugin>
 							<groupId>io.grpc</groupId>
